Fixes the wrapping
white-space property is inherited, and nowrap got inherited from the
host element

--- a/css/wikibrowser.css
+++ b/css/wikibrowser.css
@@ -3,6 +3,7 @@
 	height: 100%;
 	overflow-y: scroll;
 	display: inline-block; /* So that they are positioned side by side */
+	white-space: normal;
 }
 
 .wikibrowser-host {
